syntax = "proto3";

option java_multiple_files = true;

package org.signal.registration.sender.fictitious;

message FictitiousNumberVerificationCodeSessionData {
  string verification_code = 1;
}
